# ckanext-datastore-dumper

./: MANIFEST.in  README.md  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/datastore_dumper/: plugin.py  views.py
ckanext/datastore_dumper/assets/: script.js  webassets.yml
ckanext/datastore_dumper/logic/: action.py  auth.py  jobs.py  tasks.py
ckanext/datastore_uploader/: plugin.py  views.py
ckanext/datastore_uploader/assets/: script.js  webassets.yml
ckanext/datastore_uploader/logic/: action.py  jobs.py  tasks.py
