[metadata]
name = ckanext-datastore-dumper
version = 0.0.1
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sagargg/ckanext-datastore-dumper
author = sagarg
author_email = info@sagarg.com.np
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             datastore_dumper = ckanext.datastore_dumper.plugin:DatastoreDumperPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/datastore_dumper/i18n/ckanext-datastore_dumper.pot
width = 80

[init_catalog]
domain = ckanext-datastore_dumper
input_file = ckanext/datastore_dumper/i18n/ckanext-datastore_dumper.pot
output_dir = ckanext/datastore_dumper/i18n

[update_catalog]
domain = ckanext-datastore_dumper
input_file = ckanext/datastore_dumper/i18n/ckanext-datastore_dumper.pot
output_dir = ckanext/datastore_dumper/i18n
previous = true

[compile_catalog]
domain = ckanext-datastore_dumper
directory = ckanext/datastore_dumper/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
